--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "description":"NUBANK",
     "icons":[
     {
-    "src":"assets/img/anne-peres-plsF6obTgms-unsplash.jpg",                     
+    "src":"assets/img/nubank-95.png",                     
     "sizes":"192x192",
     "type":"image/png"
     },
     {
-    "src":"assets/img/anne-peres-plsF6obTgms-unsplash.jpg",
+    "src":"assets/img/nubank-95.png",
     "sizes":"512x512",
     "type":"image/png"
     }
