--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,24 @@
 {
-    "name":"NUBANK",
-    "short_name":"PWA",
-    "start_url":"index.html",
-    "display":"standalone",
-    "background_color":"#5900b3",
-    "theme_color":"black",
-    "scope": ".",
-    "description":"NUBANK",
-    "icons":[
+  "name": "Nubank",
+  "short_name": "Nubank", 
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#820ad1",
+  "theme_color": "#820ad1",
+  "scope": ".",
+  "description": "NUBANK",
+  "icons": [
     {
-    "src":"assets/img/nubank-95.png",                     
-    "sizes":"192x192",
-    "type":"image/png"
+      "src": "assets/img/nubank-95.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-    "src":"assets/img/nubank-95.png",
-    "sizes":"512x512",
-    "type":"image/png"
+      "src": "assets/img/nubank-95.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
