--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,25 @@
 {
   "name": "Nubank",
   "short_name": "Nubank", 
-  "start_url": "index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#820ad1",
   "theme_color": "#820ad1",
-  "scope": ".",
+  "orientation": "portrait",
+  "scope": "/",
   "description": "NUBANK",
   "icons": [
     {
       "src": "assets/img/nubank-95.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "assets/img/nubank-95.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
